links to all the html pages

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 <body>
 	<h1> Files </h1><p>
 	<a href=".">.</a><br>
-	├── <a href="./html/clusters_bin_0_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_1_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_2_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_3_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_4_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_5_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_6_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_7_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_8_edges.html">assets</a><br>
-	├── <a href="./html/clusters_bin_9_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_0_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_1_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_2_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_3_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_4_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_5_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_6_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_7_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_8_edges.html">assets</a><br>
-	├── <a href="./html/clusters_color_9_edges.html">assets</a><br>
+    ├── <a href="./html/clusters_bin_0_edges.html">binary edges > 0</a><br>
+    ├── <a href="./html/clusters_bin_1_edges.html">binary edges > 1</a><br>
+    ├── <a href="./html/clusters_bin_2_edges.html">binary edges > 2</a><br>
+    ├── <a href="./html/clusters_bin_3_edges.html">binary edges > 3</a><br>
+    ├── <a href="./html/clusters_bin_4_edges.html">binary edges > 4</a><br>
+    ├── <a href="./html/clusters_bin_5_edges.html">binary edges > 5</a><br>
+    ├── <a href="./html/clusters_bin_6_edges.html">binary edges > 6</a><br>
+    ├── <a href="./html/clusters_bin_7_edges.html">binary edges > 7</a><br>
+    ├── <a href="./html/clusters_bin_8_edges.html">binary edges > 8</a><br>
+    ├── <a href="./html/clusters_bin_9_edges.html">binary edges > 9</a><br>
+	├── <a href="./html/clusters_color_0_edges.html">color edges > 0</a><br>
+	├── <a href="./html/clusters_color_1_edges.html">color edges > 1</a><br>
+	├── <a href="./html/clusters_color_2_edges.html">color edges > 2</a><br>
+	├── <a href="./html/clusters_color_3_edges.html">color edges > 3</a><br>
+	├── <a href="./html/clusters_color_4_edges.html">color edges > 4</a><br>
+	├── <a href="./html/clusters_color_5_edges.html">color edges > 5</a><br>
+	├── <a href="./html/clusters_color_6_edges.html">color edges > 6</a><br>
+	├── <a href="./html/clusters_color_7_edges.html">color edges > 7</a><br>
+	├── <a href="./html/clusters_color_8_edges.html">color edges > 8</a><br>
+	├── <a href="./html/clusters_color_9_edges.html">color edges > 9</a><br>
 	<br><br>
 	</p>
 	<p>
